--- a/resources/views/profile_transaction_history.html
+++ b/resources/views/profile_transaction_history.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../public/css/style.css">    
+    <link rel="stylesheet" href="../../public/css/style.css">        
     <title>Product</title>
 </head>
 <body>
@@ -77,11 +77,28 @@
                 <div class="row">
                     <h4>Transaction History</h4>
                     <div class="col border p-5">
-                        <div class="d-flex justify-content-between align-items-center mb-5">
+                        <div class="d-flex justify-content-between align-items-center mb-3">
                             <h6>My Orders</h6>                        
                             <button class="btn btn-dark col-md-3 w-auto">Add New Address</button>
                         </div>
+                        <div class="mb-5">
+                            <div class="input-group rounded">
+                                <input type="search" class="form-control rounded" placeholder="Find your transaction" aria-label="Search" style="width: 400px;"
+                                aria-describedby="search-addon" />
+                                <span class="input-group-text border-0" id="search-addon">
+                                  <i class="fa fa-search"></i>
+                                </span>
+                                
+                                <select name="" id="" class="form-control ms-3">
+                                    <option value="" selected>Status</option>
+                                    <option value="1">Completed</option>
+                                    <option value="2">On Process</option>
+                                    <option value="3">Failed</option>
+                                </select>
 
+                                <input class="form-control rounded ms-3" type="date" name="" id="" style="width: 100px;">
+                              </div>
+                        </div>
                         <div class="address-card p-3 mb-3">
                             <div class="row">
                                 <div class="col-md-2">
@@ -242,7 +259,7 @@
             </div>
           </div>
         </div>
-      </div>
+    </div>
 
     <footer class="bg-dark white-text">
         <div class="container">
@@ -277,6 +294,7 @@
             </div>
         </div>
     </footer>
+    <script src="https://use.fontawesome.com/0e6c818d19.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
