--- a/resources/views/checkout.html
+++ b/resources/views/checkout.html
@@ -61,7 +61,7 @@
                     <span>ID 30115</span> <br>
                 </div>
                 <div class="row my-3 m-0">
-                    <button class="btn btn-secondary btn-large w-auto">Choose Another Address</button>
+                    <button class="btn btn-outline-dark btn-large w-auto" data-bs-toggle="modal" data-bs-target="#changeAddress">Choose Another Address</button>
                 </div>
 
                 <div class="row mt-5">
@@ -275,6 +275,37 @@
                     <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault18">
                     <label class="form-check-label" for="flexRadioDefault18">
                         <img class=payment-img src="../../public/asset/image 4-1.png" alt="">
+                    </label>
+                </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-dark">Save Changes</button>
+            </div>
+          </div>
+        </div>
+    </div>
+    
+    <div class="modal fade" id="changeAddress" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Choose your Address</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <h6>Registered Address</h6>
+                <hr class="m-0">
+                <div class="form-check mx-2 mt-2">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="address1" checked>
+                    <label class="form-check-label" for="address1">
+                        Kos Palm No.41 Lt2, Gg Haji Senin, Jl. KH Syahdan, Palmerah, Kemanggisan, Jakarta Barat
+                    </label>
+                </div>
+                <div class="form-check mx-2 mt-2">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="address2">
+                    <label class="form-check-label" for="address2">
+                        Taman Puri Rt 03 Rw 04, Baran II, Meral Barat, Kabupaten Karimun
                     </label>
                 </div>
             </div>
