--- a/resources/views/profile_address_book.html
+++ b/resources/views/profile_address_book.html
@@ -79,7 +79,7 @@
                     <div class="col border p-5">
                         <div class="d-flex justify-content-between align-items-center mb-5">
                             <h6>My Address</h6>                        
-                            <button class="btn btn-dark col-md-3 w-auto">Add New Address</button>
+                            <button class="btn btn-dark col-md-3 w-auto" data-bs-toggle="modal" data-bs-target="#addAddress">Add New Address</button>
                         </div>
 
                         <div class="address-card p-3 mb-3">
@@ -124,7 +124,26 @@
             </div>
         </div>
     </section>
-
+    <form action="" method="post">
+        <div class="modal fade" id="addAddress" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                    <h6>Add New Address</h6>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body bg-light">
+                        <label for="exampleFormControlInput1" class="form-label">New Address</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Complete Address">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Add</button>
+                </div>
+              </div>
+            </div>
+          </div>
+    </form>
     <footer class="bg-dark white-text">
         <div class="container">
             <div class="row align-items-center">
