--- a/resources/views/admin_payment_confirmation.html
+++ b/resources/views/admin_payment_confirmation.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../../public/css/style.css">    
-    <title>Product</title>
+    <title>Admin Panel</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -47,25 +48,18 @@
             <div class="col-md-2">
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">My Profile</a>
+                      <a class="nav-link text-dark" aria-current="page" href="#">Admin Account</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-dark" href="#">Address Book</a>
+                      <a class="nav-link text-dark" aria-current="page" href="#">Product</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-dark" href="#">Transaction History</a>
+                      <a class="nav-link text-dark" href="#">Transaction</a>
                     </li>
                     <li class="nav-item">
+                    <li class="nav-item">   
+                      <a class="nav-link active" href="#">Payment Confirmation</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-dark" href="#">Payment Confirmation</a>
-                    </li>
-                    <li class="nav-item">
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-dark" href="#">Settings</a>
-                    </li>
-                    <li class="nav-item">
                     <li class="nav-item">
                       <a class="nav-link text-muted" href="#">Log Out</a>
                     </li>
@@ -75,78 +69,73 @@
             </div>
             <div class="col">
                 <div class="row">
-                    <h4>My Profile</h4>
-                    <div class="col-md-8">
-                        <h6 class=mt-4>Personal Data</h6>
-                        <hr class="m-0 mb-2">
-                        <div class="mb-2 row">
-                            <label for="username" class="col-sm-2 col-form-label muted-text"><small>Username</small></label>
-                            <div class="col-sm-10">
-                              <input type="text" readonly class="form-control-plaintext" id="username" value="Chelsea Gwen">
-                            </div>
-                          </div>
-                        <div class="mb-2 row">
-                            <label for="name" class="col-sm-2 col-form-label muted-text"><small>Name</small></label>
-                            <div class="col-sm-10">
-                              <input type="text" class="form-control" id="name" value="Chelsea Gwen">
-                            </div>
-                        </div>
-                        <div class="mb-2 row">
-                            <label for="birthday" class="col-sm-2 col-form-label muted-text"><small>Birthday</small></label>
-                            <div class="col-sm-10">
-                              <input type="date" class="form-control" id="birthday" value="Chelsea Gwen">
+                    <h4>Payment Confirmation List</h4>
+                    <div class="col border p-5">
+                        <h6>All Payment</h6>                        
+                        <div class="mb-5">
+                            <div class="input-group rounded">
+                                <input type="search" class="form-control rounded" placeholder="Find your transaction" aria-label="Search" style="width: 400px;"
+                                aria-describedby="search-addon" />
+                                <span class="input-group-text border-0" id="search-addon">
+                                  <i class="fa fa-search"></i>
+                                </span>
+                                
+                                <select name="" id="" class="form-control ms-3">
+                                    <option value="" selected>Status</option>
+                                    <option value="1">Completed</option>
+                                    <option value="2">On Process</option>
+                                    <option value="3">Failed</option>
+                                </select>
                             </div>
                         </div>
-                        <div class="mb-2 row">
-                            <label for="" class="col-sm-2 col-form-label muted-text"><small>Gender</small></label>
-                            <div class="d-flex col-sm-10">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                                    <label class="form-check-label" for="flexRadioDefault1">
-                                    Male
-                                    </label>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="row">
+                                    <div class="col">ORDER ID</div>
+                                    <div class="col">SRC. BANK</div>
+                                    <div class="col">DEST. BANK</div>
+                                    <div class="col">ACCOUNT NUMBER</div>
+                                    <div class="col">TRANSFER AMOUNT</div>
+                                    <div class="col">TRANSFER DATE</div>
+                                    <div class="col">EVIDENCE</div>
                                 </div>
-                                <div class="ms-4 form-check">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-                                    <label class="form-check-label" for="flexRadioDefault2">
-                                    Female
-                                </label>    
+                                <hr>
+                                <div class="row mb-3">
+                                    <div class="col">
+                                        <strong>ABCDE123</strong><br>
+                                    </div>
+                                    <div class="col">BCA</div>
+                                    <div class="col">BCA</div>
+                                    <div class="col">8063584794</div>
+                                    <div class="col">Rp 325.000</div>
+                                    <div class="col">24/11/2021</div>
+                                    <div class="col">
+                                        <button class="btn" data-bs-toggle="modal" data-bs-target="#updateProduct"><i class="fa fa-download"></i></button>
+                                        <button class="btn ms-3 btn-dark">Confirm</button>
+                                    </div>
                                 </div>
-                            </div>
+                                <div class="row mb-3">
+                                    <div class="col">
+                                        <strong>ABCDE123</strong><br>
+                                    </div>
+                                    <div class="col">BCA</div>
+                                    <div class="col">BCA</div>
+                                    <div class="col">8063584794</div>
+                                    <div class="col">Rp 325.000</div>
+                                    <div class="col">24/11/2021</div>
+                                    <div class="col">
+                                        <button class="btn" data-bs-toggle="modal" data-bs-target="#updateProduct"><i class="fa fa-download"></i></button>
+                                        <button class="btn ms-3 btn-dark">Confirm</button>
+                                    </div>
+                                </div>
                         </div>
-                        <button class="btn btn-outline-dark">Save</button>
-                    </div>
-                    <div class="col border">
-                        <div class="d-flex flex-column justify-content-center align-items-center h-100">
-                            <img src="../../public/asset/avatar.png" alt="" style="width:100px">
-                            <input type="file" class="btn btn-outline-dark mt-1"><br>
-                            <small class="muted-text">Image size: max 1 Mb</small>
-                            <small class="muted-text">Format extension: .JPEG .PNG</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <h6 class=mt-4>Contact</h6>
-                        <hr class="m-0 mb-2">
-                        <div class="mb-2 row">
-                            <label for="userEmail" class="col-sm-2 col-form-label muted-text"><small>Email</small></label>
-                            <div class="col-sm-10">
-                                <input type="email" class="form-control" id="userEmail" value="Chelsea Gwen">
-                            </div>
-                        </div>
-                        <div class="mb-2 row">
-                            <label for="userNumber" class="col-sm-2 col-form-label muted-text"><small>Phone Number</small></label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="userNumber" value="0853 1234 5678">
-                            </div>
-                        </div>
-                        <button class="btn btn-outline-dark w-auto">Save</button>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+ 
+
 
     <footer class="bg-dark white-text">
         <div class="container">
@@ -181,7 +170,8 @@
             </div>
         </div>
     </footer>
+    <script src="../../public/js/script.js"></script>
+    <script src="https://use.fontawesome.com/0e6c818d19.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
 </body>
 </html>
