--- a/resources/views/admin_product.html
+++ b/resources/views/admin_product.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../../public/css/style.css">    
     <title>Product</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -47,14 +48,17 @@
             <div class="col-md-2">
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
+                      <a class="nav-link text-dark" aria-current="page" href="#">Admin Account</a>
+                    </li>
+                    <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="#">Product</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-dark" href="#">Transaction</a>
                     </li>
                     <li class="nav-item">
-                    <li class="nav-item">
-                      <a class="nav-link text-dark" href="#" data-bs-toggle="modal" data-bs-target="#paymentConfirmation">Payment Confirmation</a>
+                    <li class="nav-item">   
+                      <a class="nav-link text-dark" href="#">Payment Confirmation</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-muted" href="#">Log Out</a>
@@ -69,7 +73,7 @@
                     <div class="col border p-5">
                         <div class="d-flex justify-content-between align-items-center mb-3">
                             <h6>All Products</h6>                        
-                            <button class="btn btn-dark col-md-3 w-auto">Add New Product</button>
+                            <button class="btn btn-dark col-md-3 w-auto" data-bs-toggle="modal" data-bs-target="#addProduct">Add New Product</button>
                         </div>
                         <div class="mb-5">
                             <div class="input-group rounded">
@@ -196,8 +200,12 @@
                     <hr class="m-0">
                     <div class="row mb-3 mt-3">
                         <div class="col">Black</div>
-                        <div class="col">Rp325.000</div>
-                        <div class="col">50</div>
+                        <div class="col">
+                            <input type="number" class="form-control" value="325000">
+                        </div>
+                        <div class="col">
+                            <input type="number" class="form-control" value="50">
+                        </div>
                         <div class="col">
                             <div class="d-flex align-items-center">
                                 <div class="form-check form-switch d-flex">
@@ -209,8 +217,12 @@
                     </div>
                     <div class="row mb-3">
                         <div class="col">Black</div>
-                        <div class="col">Rp325.000</div>
-                        <div class="col">50</div>
+                        <div class="col">
+                            <input type="number" class="form-control" value="325000">
+                        </div>
+                        <div class="col">
+                            <input type="number" class="form-control" value="50">
+                        </div>
                         <div class="col">
                             <div class="d-flex align-items-center">
                                 <div class="form-check form-switch d-flex">
@@ -224,7 +236,85 @@
             </div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button class="btn btn-dark">Update</button>
+                <button class="btn btn-dark">Update Product</button>
+
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="addProduct" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Add Product</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="mb-4">
+                            <label for="photo" class="form-label">Product Photo</label>
+                            <input type="file" class="form-control" id="photo" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="mb-4">
+                            <label for="productName" class="form-label">Product Name</label>
+                            <input type="text" id="productName" class="form-control" aria-describedby="nameHelpBlock">
+                            <div id="nameHelpBlock" class="form-text">
+                                Include min. 40 characters to make it more attractive and easy for buyers to find, consisting of product type, brand, and information such as color, material, or type.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="mb-4">
+                            <label for="productDesc" class="form-label">Product Description</label>
+                            <input type="text" id="productDesc" class="form-control" aria-describedby="nameHelpBlock">
+                            <div id="nameHelpBlock" class="form-text">
+                                Include a complete description according to the product, such as excellence, specifications, material, size, validity period, and others. The length of the description is between 450-2000 characters.                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="d-flex justify-content-between align-items-center mb-3">
+                            <label class="form-label">Product's Color</label>
+                            <div>
+                                <button class="btn btn-outline-dark" id="addColor">Add Color</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row py-2 bg-light">
+                        <div class="col">Color</div>
+                        <div class="col">Price</div>
+                        <div class="col">Stock</div>
+                        <div class="col">Active</div>
+                    </div>
+                    <hr class="m-0">
+                    <div class="row mb-3 mt-3 color-row">
+                        <div class="col">
+                            <input id="input1" type="text" class=form-control value="Color">
+                        </div>
+                        <div class="col">
+                            <input id="input2" type="number" class="form-control" value="0">
+                        </div>
+                        <div class="col">
+                            <input id="input3" type="number" class="form-control" value="0">
+                        </div>
+                        <div class="col">
+                            <div class="d-flex align-items-center">
+                                <div class="form-check form-switch d-flex">
+                                    <input class="form-check-input" type="checkbox" id="switch3" checked>
+                                </div>
+                                <button class="btn ms-3 specialTrash" disabled><i class="fa fa-trash"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button class="btn btn-dark">Update Product</button>
 
             </div>
           </div>
@@ -264,6 +354,7 @@
             </div>
         </div>
     </footer>
+    <script src="../../public/js/script.js"></script>
     <script src="https://use.fontawesome.com/0e6c818d19.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
