--- a/resources/views/cart.html
+++ b/resources/views/cart.html
@@ -62,7 +62,15 @@
                     </div>
                     <div class="col">Rp 325.000</div>
                     <div class="col">
-                        <input type="number" class="form-control" placeholder="1" aria-label="Username" aria-describedby="basic-addon1" value="1" min="1">
+                        <div class="input-group">
+                            <form action="">
+                                <button class="btn btn-sm" style="color: #656565;"><i class="fa fa-plus"></i></button>
+                            </form>
+                            <input type="number" class="form-control d-flex" placeholder="1" aria-label="Username" aria-describedby="basic-addon1" value="1" min="1">
+                            <form action="">
+                                <button class="btn btn-sm" style="color: #656565;"><i class="fa fa-minus"></i></button>
+                            </form>
+                        </div>
                     </div>
                     <div class="col">Rp 325.000</div>
                 </div>
@@ -119,5 +127,8 @@
             </div>
         </div>
     </footer>
+    <script src="https://use.fontawesome.com/0e6c818d19.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
